# ai-unified-memory

./: .gitignore  PLAN.md  README.md  pyproject.toml
configs/: claude.md  hermes.md  kimi.md  mcp-gateway.md  openclaw.md
docs/: migration.md
scripts/: migrate.py  setup.sh
src/ai_unified_memory/: __init__.py  __main__.py  cli.py  models.py  server.py  store.py  sync.py
src/ai_unified_memory/guardian/: __init__.py  cli.py  digest.py  telegram.py
src/ai_unified_memory/status/: __init__.py  checks.py  cli.py
tests/: test_server.py  test_store.py  test_sync.py
